--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,10 @@ header {
     transition: 2s;
 }
 
-<<<<<<< HEAD:css/style.css
-.img-header {
-    width: 25%;
-}
-=======
+
 .looking {
-    width: 30%;
+    width: 300px;
+    height: 300px;
 }
 
 /* loading icon */
@@ -90,4 +87,3 @@ header {
         transform: scale(0.9);
     }
 } */
->>>>>>> 69b8e309fcc9a636a66d22e3c11124618de06adb:style.css
